Update portfolio section with new project details and images

--- a/index.html
+++ b/index.html
@@ -583,48 +583,21 @@
 
             <div data-aos="fade-right" class="portfolio__container container swiper-container">
                 <div class="swiper-wrapper">
+
                     <!--==================== PORTFOLIO 1 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
+                        <img src="assets/img/Chatspace.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Modern Website</h3>
-                            <p class="portfolio__description">Website adaptable to all devices, with ui components and
-                                animated interactions.</p>
-                            <a href="#" class="button button--flex button--small portfolio_-button">
+                            <h3 class="portfolio__title">Chatspace</h3>
+                            <p class="portfolio__description">Simple chat web app, Website adaptable to all devices, with ui components
+                            </p>
+                            <a href="https://chatspace-krbm.onrender.com" target="_blank" class="button button--flex button--small portfolio_-button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
-                    </div>
-                    <!--==================== PORTFOLIO 2 ====================-->
-                    <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio2.jpg" alt="" class="portfolio__img">
-
-                        <div class="portfolio__data">
-                            <h3 class="portfolio__title">Brand Design</h3>
-                            <p class="portfolio__description">Website adaptable to all devices, with ui components and
-                                animated interactions.</p>
-                            <a href="#" class="button button--flex button--small portfolio_-button">
-                                Demo
-                                <i class="uil uil-arrow-right button__icon"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <!--==================== PORTFOLIO 3 ====================-->
-                    <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
-
-                        <div class="portfolio__data">
-                            <h3 class="portfolio__title">Online Store</h3>
-                            <p class="portfolio__description">Website adaptable to all devices, with ui components and
-                                animated interactions.</p>
-                            <a href="#" class="button button--flex button--small portfolio_-button">
-                                Demo
-                                <i class="uil uil-arrow-right button__icon"></i>
-                            </a>
-                        </div>
-                    </div>
+                    </div>     
                 </div>
 
 
@@ -660,7 +633,7 @@
         </section>
 
         <!--==================== TESTIMONIAL ====================-->
-        <section class="testimonial section">
+        <!-- <section class="testimonial section">
             <h2 class="section__title">Testimonial</h2>
             <span class="section__subtitle">My client saying</span>
             <span class="section__subtitle swiper-error">Slide here to see next>>></span>
@@ -669,7 +642,7 @@
                 <div class="swiper-wrapper">
 
                     <!--==================== TESTIMONIAL 1 ====================-->
-                    <div class="testimonial__content swiper-slide">
+                    <!-- <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
                                 <img src="assets/img/testimonial1.jpg" alt="" class="testimonial__img">
@@ -683,9 +656,9 @@
                         <p class="testimonial__description">
                             I get a good impression, I carry out my project with all the possible quality and attention
                             and support 24 hours a day.</p>
-                    </div>
+                    </div> -->
                     <!--==================== TESTIMONIAL 2 ====================-->
-                    <div class="testimonial__content swiper-slide">
+                    <!-- <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
                                 <img src="assets/img/testimonial4.jpg" alt="" class="testimonial__img">
@@ -700,9 +673,9 @@
                             It's always a pleasure to work with Mrinmoy, he brings 100% to each project and gets work
                             done when
                             it's needed the most.</p>
-                    </div>
+                    </div> -->
                     <!--==================== TESTIMONIAL 3 ====================-->
-                    <div class="testimonial__content swiper-slide">
+                    <!-- <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
                                 <img src="assets/img/testimonial3.jpg" alt="" class="testimonial__img">
@@ -715,9 +688,9 @@
                         </div>
                         <p class="testimonial__description">
                             He's a good programmer, I carry out my project with all the possible quality. </p>
-                    </div>
+                    </div> -->
                     <!--==================== TESTIMONIAL 4 ====================-->
-                    <div class="testimonial__content swiper-slide">
+                    <!-- <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
                                 <img src="assets/img/testimonial2.jpg" alt="" class="testimonial__img">
@@ -732,12 +705,12 @@
                             He's an amazing web developer, he has a deep understanding about his sphere, and delivers
                             great result.</p>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Add Pagination -->
-                <div class="swiper-pagination swiper-pagination-testimonial"></div>
+                <!-- <div class="swiper-pagination swiper-pagination-testimonial"></div>
             </div>
-        </section>
+        </section> -->
 
         <!--==================== CONTACT ME ====================-->
         <section class="contact section" id="contact">
