--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Padmanaban M</title>
 
     <!--==================== Favicon ====================-->
-    <link rel="shortcut icon" href="assets/img/favicon_edited.png" type="image/png">
+    <link rel="shortcut icon" href="assets/img/M (3).png" type="image/png">
 
     <!--==================== Animate on scroll CDN ====================-->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -119,7 +119,7 @@
                                 129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                 -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
 
-                                <image class="home__blob-img" x="12" y="18" href="assets/img/perfil.png" />
+                                <image class="home__blob-img" x="12" y="18" href="assets/img/my.png" />
                             </g>
                         </svg>
                     </div>
@@ -185,7 +185,7 @@
                     </div> -->
 
                     <div class="about__buttons">
-                        <a download="" href="assets/pdf/mrinmoy-cv.pdf" class="button button--flex">
+                        <a download="" href="assets/pdf/Padmanaban CV.pdf" class="button button--flex">
                             Download CV <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -216,7 +216,7 @@
                         <div class="skills__list grid">
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name"><img src="/assets/img/html.png" class="skills__logo"
+                                    <h3 class="skills__name"><img src="assets/img/html.png" class="skills__logo"
                                             width="25px" alt=""> HTML</h3>
                                     <span class="skills__number">90%</span>
                                 </div>
