--- a/index.html
+++ b/index.html
@@ -774,8 +774,8 @@
         <div class="footer__bg">
             <div class="footer__container container grid">
                 <div>
-                    <h1 class="footer__title">Mrinmoy</h1>
-                    <span class="footer__subtitle">Frontend Developer</span>
+                    <h1 class="footer__title">Padcoder</h1>
+                    <span class="footer__subtitle">Full Stack Developer</span>
                 </div>
 
                 <ul class="footer__links">
