--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
         <div class="footer__bg">
             <div class="footer__container container grid">
                 <div>
-                    <h1 class="footer__title">Padcoder</h1>
+                    <h1 class="footer__title">Padmanaban M</h1>
                     <span class="footer__subtitle">Full Stack Developer</span>
                 </div>
 
@@ -808,7 +808,7 @@
                     </a>
                 </div>
             </div>
-            <p class="footer__copy">&copy; 2022 Mrinmoy Deka | All Rights Reserved</p>
+            <p class="footer__copy">&copy; 2025 Padmanaban M| All Rights Reserved</p>
         </div>
     </footer>
 
