--- a/index.html
+++ b/index.html
@@ -780,13 +780,13 @@
 
                 <ul class="footer__links">
                     <li>
-                        <a href="#services" class="footer__link">Services</a>
+                        <a href="#skills" class="footer__link">Skills</a>
                     </li>
                     <li>
                         <a href="#portfolio" class="footer__link">Portfolio</a>
                     </li>
                     <li>
-                        <a href="#contact" class="footer__link">Contactme</a>
+                        <a href="#contact" class="footer__link">Contact me</a>
                     </li>
                 </ul>
 
