--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <!--==================== Animate on scroll CDN ====================-->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
+    <!--==================== Toastify ====================-->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
 </head>
 
 <body>
@@ -736,25 +739,21 @@
                     </div>
                 </div>
 
-                <form action="https://formsubmit.co/3291f4338dc27f344cdc564a1df42f85" method="POST"
-                    class="contact__form grid">
+                <form id="messageForm" class="contact__form grid">
                     <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label for="" class="contact__label">Name</label>
-                            <input name="name" type="text" class="contact__input">
+                            <input name="name" id="name" type="text" class="contact__input">
                         </div>
                         <div class="contact__content">
                             <label for="" class="contact__label">Email</label>
-                            <input name="email" type="email" class="contact__input">
+                            <input name="email" id="email" type="email" class="contact__input">
                         </div>
                     </div>
-                    <div class="contact__content">
-                        <label for="" class="contact__label">Project</label>
-                        <input name="message" type="text" class="contact__input">
-                    </div>
+                  
                     <div class="contact__content">
                         <label for="" class="contact__label">Message</label>
-                        <textarea name="" id="" cols="0" rows="7" class="contact__input" name="message"></textarea>
+                        <textarea name="" id="message" cols="0" rows="6" class="contact__input" name="message"></textarea>
                     </div>
 
                     <div>
@@ -773,8 +772,8 @@
     <footer class="footer">
         <div class="footer__bg">
             <div class="footer__container container grid">
-                <div>
-                    <h1 class="footer__title">Padmanaban M</h1>
+                <div >
+                    <h1 class="footer__title">Padmanaban</h1>
                     <span class="footer__subtitle">Full Stack Developer</span>
                 </div>
 
@@ -786,7 +785,7 @@
                         <a href="#portfolio" class="footer__link">Portfolio</a>
                     </li>
                     <li>
-                        <a href="#contact" class="footer__link">Contact me</a>
+                        <a href="#contact" class="footer__link">Contact</a>
                     </li>
                 </ul>
 
@@ -808,7 +807,7 @@
                     </a>
                 </div>
             </div>
-            <p class="footer__copy">&copy; 2025 Padmanaban M| All Rights Reserved</p>
+            <p class="footer__copy">&copy; 2025 Pad-coder| All Rights Reserved</p>
         </div>
     </footer>
 
@@ -844,6 +843,76 @@
         AOS.init({
             offset: 300,
             duration: 2000
+        });
+    </script>
+
+    <!--=================== Toastify ===============-->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
+    <!--=================== Form Submission ===============-->
+    <script>
+             document.getElementById("messageForm").addEventListener("submit", async function(event) {
+            event.preventDefault(); // Prevent default form submission
+
+            const name = document.getElementById("name").value;
+            const email = document.getElementById("email").value;
+            const message = document.getElementById("message").value;
+
+            const requestData = { name, email, message };
+
+            try {
+                const response = await fetch("https://portfolio-be-99ru.onrender.com/api/sendMesssage/", {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json"
+                    },
+                    body: JSON.stringify(requestData)
+                });
+
+                const result = await response.json();
+                if (response.ok) {
+                    Toastify({
+                        text: "Message sent successfully!",
+                        duration: 3000,
+                        gravity: "top", // 'top', 'bottom'
+                        position: "right", // 'left', 'center', 'right'
+                        style:{
+                            background: "#77e067",
+                            color: "#ffffff",
+                            borderRadius: "5px",
+                        },
+                        stopOnFocus: true,
+                    }).showToast();
+                    
+                    document.getElementById("messageForm").reset();
+                } else {
+                    Toastify({
+                        text: result.error || "Failed to send message",
+                        duration: 3000,
+                        gravity: "top",
+                        position: "right",
+                        style:{
+                            background: "#EE0022",
+                            color: "#ffffff",
+                            borderRadius: "5px",
+                        },
+                        stopOnFocus: true,
+                    }).showToast();
+                }
+            } catch (error) {
+                Toastify({
+                        text: result.error || "Internal server error",
+                        duration: 3000,
+                        gravity: "top",
+                        position: "right",
+                        style:{
+                            background: "#EE0022",
+                            color: "#ffffff",
+                            borderRadius: "5px",
+                        },
+                        stopOnFocus: true,
+                    }).showToast();
+            }
         });
     </script>
 
